--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mileyroids ver 0.0.1</title>
   </head>
   <body>
+    <div id="mask"></div>
     <header>
       <span id='brand'>Mileyroids</span>
     </header>
