--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   </head>
   <body>
     <div id="mask"></div>
+    <div id="instructions-container">
+      <div class="instructions red-text">
+        <h1>*Keyboard Required</h1>
+      </div>
+      <div class="instructions">
+        <div class="start">
+          <p>Enter the Konami Code to start the game:</p>
+          <img src="images/start-code.png" alt="start code">
+        </div>
+      </div>
+      <div class="instructions">
+        <div class="controls">
+          <p>Controls:</p>
+          <img src="images/controls.png" alt="controls">
+        </div>
+      </div>
+    </div>
     <header>
       <span id='brand'>Mileyroids</span>
     </header>
