Make container for images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <header>
       <span id='brand'>Mileyroids</span>
     </header>
-    <img src="images/miley-cyrus-twerking-8.gif">
+    <div id="images-container">
+      <img src="images/1.gif">
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/jQuery_konami_code.js"></script>
