--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     <div id="images-container">
       <img src="images/1.gif">
     </div>
+    <span class='doge green medium' style="top: 15%; left: 10%;">so miley</span>
+    <span class='doge violet big' style="top: 60%; right: 2%;">much twerk</span>
+    <span class='doge white small' style="top: 10%; right: 10%;">wow</span>
+    <span class='doge light-blue medium' style="top: 80%; left: 20%;">wow</span>
+    <span class='doge orange medium' style="top: 58%; left: 2%;">very shake shake</span>
+    <span class='doge blue big' style="top: 8%; right: 22%;">such mmm chiky boom uhhhhhh licky</span>
+    <span class='doge yellow medium' style="top: 48%; right: 16%;">RAWRRR</span>
+
+
+    <footer>
+      <span id='credits'>Site by: <a href="http://samsamskies.github.io/">SamSamskies</a> | Powered by: <a href="http://kickassapp.com/">kickass.js</a> and <a href="https://github.com/theInternauts/Konami_Code">Konami_Code jQuery plugin</a></span>
+    </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/jQuery_konami_code.js"></script>
