--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="mask"></div>
+    <header>
+      <span id='brand'>Mileyroids</span>
+    </header>
     <div id="instructions-container">
       <div class="instructions red-text">
         <h1>*Keyboard Required</h1>
@@ -25,9 +28,6 @@
         </div>
       </div>
     </div>
-    <header>
-      <span id='brand'>Mileyroids</span>
-    </header>
     <div id="images-container">
       <img src="images/1.gif">
     </div>
@@ -39,6 +39,8 @@
     <span class='doge blue big' style="top: 8%; right: 22%;">such mmm chiky boom uhhhhhh licky</span>
     <span class='doge yellow medium' style="top: 48%; right: 16%;">RAWRRR</span>
 
+    <iframe id='main-vid' width="560" height="315" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
+    <iframe id='mini-vid' width="56" height="32" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
 
     <footer>
       <span id='credits'>Site by: <a href="http://samsamskies.github.io/">SamSamskies</a> | Powered by: <a href="http://kickassapp.com/">kickass.js</a> and <a href="https://github.com/theInternauts/Konami_Code">Konami_Code jQuery plugin</a></span>
