Dynamically place images on the screen

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       </div>
     </div>
     <div id="images-container">
-      <img src="images/1.gif">
+      <img src="images/1.gif" style="top: 50px; left: 0px">
     </div>
-    <span class='doge green medium' style="top: 15%; left: 10%;">so miley</span>
-    <span class='doge violet big' style="top: 60%; right: 2%;">much twerk</span>
-    <span class='doge white small' style="top: 10%; right: 10%;">wow</span>
-    <span class='doge light-blue medium' style="top: 80%; left: 20%;">wow</span>
-    <span class='doge orange medium' style="top: 58%; left: 2%;">very shake shake</span>
-    <span class='doge blue big' style="top: 8%; right: 22%;">such mmm chiky boom uhhhhhh licky</span>
-    <span class='doge yellow medium' style="top: 48%; right: 16%;">RAWRRR</span>
+    <span class='doge green medium' style="top: 150px; left: 100px;">so miley</span>
+    <span class='doge violet big' style="top: 400px; right: 20px;">much twerk</span>
+    <span class='doge white small' style="top: 70px; right: 110px;">wow</span>
+    <span class='doge light-blue medium' style="top: 600px; left: 200px;">wow</span>
+    <span class='doge orange medium' style="top: 390px; left: 20px;">very shake shake</span>
+    <span class='doge blue big' style="top: 560px; right: 22px;">such mmm chiky boom uhhhhhh licky</span>
+    <span class='doge yellow medium' style="top: 200px; right: 128px">RAWRRR</span>
 
     <iframe id='main-vid' width="560" height="315" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
     <iframe id='mini-vid' width="56" height="32" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
