Update doge phrase muhhhhh

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <span class='doge white small' style="top: 70px; right: 110px;">wow</span>
     <span class='doge light-blue medium' style="top: 600px; left: 200px;">wow</span>
     <span class='doge orange medium' style="top: 390px; left: 20px;">very shake shake</span>
-    <span class='doge blue big' style="top: 560px; right: 22px;">such mmm chiky boom uhhhhhh licky</span>
+    <span class='doge blue big' style="top: 560px; right: 22px;">such mmm chiky boom muhhhhhh licky</span>
     <span class='doge yellow medium' style="top: 200px; right: 128px">RAWRRR</span>
 
     <iframe id='main-vid' width="560" height="315" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
