--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="mask"></div>
+    <div id='doge-ball'></div>
     <header>
       <span id='brand'>Mileyroids</span>
     </header>
