--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/jQuery_konami_code.js"></script>
     <script src='js/app.js'></script>
+    <script id="gameCode"></script>
   </body>
 </html>
