Try to fix YouTube https error occuring with kickass

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <span class='doge red big' style="top: 560px; right: 22px;">such mmm chiky boom muhhhhhh licky</span>
     <span class='doge yellow medium' style="top: 200px; right: 128px">RAWRRR</span>
 
-    <iframe id='main-vid' width="560" height="315" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
-    <iframe id='mini-vid' width="56" height="32" src="//www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
+    <iframe id='main-vid' width="560" height="315" src="https://www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
+    <iframe id='mini-vid' width="56" height="32" src="https://www.youtube.com/embed/LrUvu1mlWco?controls=0&showinfo=0&autohide=1&enablejsapi=1" frameborder="0"></iframe>
 
     <footer>
       <span id='credits'>Site by: <a href="http://samsamskies.github.io/">SamSamskies</a> | Powered by: <a href="http://kickassapp.com/">kickass.js</a> and <a href="https://github.com/theInternauts/Konami_Code">Konami_Code jQuery plugin</a></span>
